Fix spacing and margins in Home route

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -15,18 +15,11 @@
     padding: 8px;
 }
 
-.footer {
-}
-
 .timeline {
     background-color: whitesmoke;
     font-family: 'Advent Pro', sans-serif;
 }
 
-.home {
-    display: flex;
-    justify-content: center;
-}
 
 @media only screen and (max-width: 1169px) {
     /* .vertical-timeline--animate */
